Pre-Express + diy-node-router

--- a/NodeJS/02. Node Module System.md
+++ b/NodeJS/02. Node Module System.md
@@ -119,7 +119,7 @@ function log(message) {
     console.log(message);
 }
 
-module.exports = log;
+module.exports.log = log;
 
 // app.js
 const logger = require("./logger");
@@ -197,9 +197,11 @@ const fs = require("fs");
 
 // You should avoid using sync version of file system module
 // Sync Version
+// 동기는 처음부터 끝까지 감시하기 때문에 동기 필요
 const files = fs.readdirSync('./');
 console.log(files);
 
+// 비동기는 처음부터 끝까지 감시하지 않기 때문에 비동기 필요
 // Async Version
 fd.readdir('./', function (err, files) {
     if (err) console.log('Error', err);
@@ -459,30 +461,6 @@ console.log(result); // 2
 ```
 
 `mod1`, `mod2`는 `require` 함수를 사용하여, 각각 `increment` 함수를 사용하지만, 내부적으로는 같은 객체를 바라보고 (참조) 있다. 그러므로 함수가 두 번 실행되어 `result`의 값은 2가 된다.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 https://medium.com/free-code-camp/what-exactly-is-node-js-ae36e97449f5
 
